--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-DATABASE_URL=postgresql://neondb_owner:npg_r9tAhlkEY6cz@ep-solitary-salad-adyo0uym-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+DB_HOST=ep-solitary-salad-adyo0uym-pooler.c-2.us-east-1.aws.neon.tech
+DB_PORT=5432
+DB_NAME=neondb
+DB_USER=neondb_owner
+DB_PASSWORD=npg_r9tAhlkEY6cz
+DB_SSL=true
+
 PORT=5000
